fix error on curriculum component; refactor spacing of about me text

--- a/src/components/AboutMe/styles.module.css
+++ b/src/components/AboutMe/styles.module.css
@@ -58,10 +58,10 @@
   }
 
   .content {
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     line-height: 2.1rem;
     text-align: justify;
-    width: 90%;
+    width: 100%;
   }
 
   .animation img {
